# generador-sql

backend/: pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  database.py
backend/src/schemas/: user.py
